// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalAdminNewsForm /> render correctly 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header"
  >
    <h3
      className="box-title"
    >
      <FormattedMessage
        id="proposal.admin.news"
        values={Object {}}
      />
    </h3>
    <a
      className="pull-right link"
      href="admin.help.link.proposal.news"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        className="fa fa-info-circle"
      />
       
      <FormattedMessage
        id="global.help"
        values={Object {}}
      />
    </a>
  </div>
  <div
    className="box-content"
  >
    <ListGroup
      bsClass="list-group"
    >
      <ListGroupItem
        bsClass="list-group-item"
        key="0"
        listItem={false}
      >
        <Row
          bsClass="row"
          componentClass="div"
        >
          <Col
            bsClass="col"
            componentClass="div"
            xs={6}
          >
            <strong>
              news-1
            </strong>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            xs={6}
          >
            <ButtonToolbar
              bsClass="btn-toolbar"
              className="pull-right"
            >
              <Button
                active={false}
                block={false}
                bsClass="btn"
                bsStyle="warning"
                className="btn-outline-warning"
                disabled={false}
                href="https://capco.dev/admin/capco/app/post/19/edit"
              >
                <i
                  className="fa fa-pencil"
                />
                 
                <FormattedMessage
                  id="global.edit"
                  values={Object {}}
                />
              </Button>
              <Button
                active={false}
                block={false}
                bsClass="btn"
                bsStyle="danger"
                className="btn-outline-danger"
                disabled={false}
                href="https://capco.dev/admin/capco/app/post/19/delete"
              >
                <i
                  className="fa fa-trash"
                />
              </Button>
            </ButtonToolbar>
          </Col>
        </Row>
      </ListGroupItem>
    </ListGroup>
    <ButtonToolbar
      bsClass="btn-toolbar"
      className="box-content__toolbar"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        disabled={false}
        href="http://localhost/admin/capco/app/post/create"
      >
        <FormattedMessage
          id="global.add"
          values={Object {}}
        />
      </Button>
    </ButtonToolbar>
  </div>
</div>
`;

exports[`<ProposalAdminNewsForm /> render correctly when there are no news 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header"
  >
    <h3
      className="box-title"
    >
      <FormattedMessage
        id="proposal.admin.news"
        values={Object {}}
      />
    </h3>
    <a
      className="pull-right link"
      href="admin.help.link.proposal.news"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        className="fa fa-info-circle"
      />
       
      <FormattedMessage
        id="global.help"
        values={Object {}}
      />
    </a>
  </div>
  <div
    className="box-content"
  >
    <FormattedMessage
      id="proposal.no_posts"
      values={Object {}}
    />
    <ButtonToolbar
      bsClass="btn-toolbar"
      className="box-content__toolbar"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        disabled={false}
        href="http://localhost/admin/capco/app/post/create"
      >
        <FormattedMessage
          id="global.add"
          values={Object {}}
        />
      </Button>
    </ButtonToolbar>
  </div>
</div>
`;
